add custom converter to serialize/deserialize

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.mongoorm</groupId>
+    <groupId>com.mokylin</groupId>
     <artifactId>mongoorm</artifactId>
     <version>1.0-SNAPSHOT</version>
 
@@ -25,5 +25,31 @@
             <version>3.3.2</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.7</source>
+                    <target>1.7</target>
+                    <encoding>UTF-8</encoding>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+    <distributionManagement>
+        <repository>
+            <id>dev-releases</id>
+            <name>Nexus Release Repository</name>
+            <url>http://168.168.1.92:8081/nexus/content/repositories/releases/</url>
+        </repository>
+        <snapshotRepository>
+            <id>dev-snapshots</id>
+            <name>Nexus Snapshot Repository</name>
+            <url>http://168.168.1.92:8081/nexus/content/repositories/snapshots/</url>
+        </snapshotRepository>
+    </distributionManagement>
 
 </project>
